--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -4,5 +4,5 @@
         'forms',
         'grid',
         'images',
-        'media-queries',
-        'navigation';
+        'navigation',
+        'media-queries';
