--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,16 @@
 * {
   font-family: 'Lato', sans-serif;
   color: #777;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 p {
-  line-height: 1.46em; }
+  line-height: 1.45em;
+}
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 /*              Buttons                          */
 /* ============================================= */
@@ -21,28 +24,35 @@ a {
   border: none;
   padding: 10px 0;
   text-transform: uppercase;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 .default {
-  background-color: #51ddfc; }
+  background-color: #51ddfc;
+}
 
 .error {
-  background-color: #e4757a; }
+  background-color: #e4757a;
+}
 
 .info {
-  background-color: #927bc1; }
+  background-color: #927bc1;
+}
 
 .success {
-  background-color: #63cc82; }
+  background-color: #63cc82;
+}
 
 .warning {
-  background-color: #fd7856; }
+  background-color: #fd7856;
+}
 
 /* ============================================= */
 /*              Forms                            */
 /* ============================================= */
 .form {
-  flex-basis: 100%; }
+  flex-basis: 100%;
+}
 
 .input {
   display: block;
@@ -50,7 +60,8 @@ a {
   margin: 10px auto 0;
   border: none;
   padding: 10px;
-  border-bottom: 5px solid #58e1c1; }
+  border-bottom: 5px solid #58e1c1;
+}
 
 .hidden {
   position: absolute;
@@ -58,64 +69,81 @@ a {
   top: auto;
   width: 1px;
   height: 1px;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 /* ============================================= */
 /*              Grid System                      */
 /* ============================================= */
 .container {
-  padding: 0 10px; }
+  padding: 0 10px;
+}
 
 .row {
   display: flex;
   flex-direction: column;
-  padding: 1em 10px; }
+  padding: 1em 10px;
+}
 
 [class^=col] {
   margin-top: 10px;
   flex-basis: 100%;
   min-height: 25px;
   padding: 10px;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
 
 .theme.col-1 {
-  background-color: #927bc1; }
+  background-color: #927bc1;
+}
 
 .theme.col-2 {
-  background-color: #fd7856; }
+  background-color: #fd7856;
+}
 
 .theme.col-3 {
-  background-color: #deb2ee; }
+  background-color: #deb2ee;
+}
 
 .theme.col-4 {
-  background-color: #7ee6fd; }
+  background-color: #7ee6fd;
+}
 
 .theme.col-5 {
-  background-color: #88d9a0; }
+  background-color: #88d9a0;
+}
 
 .theme.col-6 {
-  background-color: #4da2bb; }
+  background-color: #4da2bb;
+}
 
 .theme.col-7 {
-  background-color: #ec9fa3; }
+  background-color: #ec9fa3;
+}
 
 .theme.col-8 {
-  background-color: #fd9f85; }
+  background-color: #fd9f85;
+}
 
 .theme.col-9 {
-  background-color: #e4757a; }
+  background-color: #e4757a;
+}
 
 .theme.col-10 {
-  background-color: #63cc82; }
+  background-color: #63cc82;
+}
 
 .theme.col-11 {
-  background-color: #51ddfc; }
+  background-color: #51ddfc;
+}
 
 .theme.col-12 {
-  background-color: #80e8d1; }
+  background-color: #80e8d1;
+}
 
 .card {
-  flex-basis: 100%; }
+  flex-basis: 100%;
+}
 
 /* ============================================= */
 /*              Images                           */
@@ -126,7 +154,8 @@ a {
   margin-right: auto;
   margin-top: 10px;
   max-width: 100%;
-  max-height: 100%; }
+  max-height: 100%;
+}
 
 .img-frame {
   display: block;
@@ -135,12 +164,38 @@ a {
   margin-top: 10px;
   max-width: 100%;
   padding: 13px;
-  border: 1px solid #ccc; }
+  border: 1px solid #ccc;
+}
 
 .img-logo {
   display: block;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+}
+
+/* ============================================= */
+/*              Navigation                       */
+/* ============================================= */
+.nav {
+  padding-left: 0;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-link {
+  text-align: center;
+  border-radius: 5px;
+  padding: 10px 0;
+  display: block;
+  width: 100%;
+  transition: background-color .2s ease-in-out,  color .2s ease-in-out;
+}
+
+.nav-link:hover {
+  color: #fff;
+  background-color: #58e1c1;
+}
 
 /* ============================================= */
 /*              Media Queries                    */
@@ -150,78 +205,80 @@ a {
     max-width: 1400px;
     display: block;
     margin-left: auto;
-    margin-right: auto; }
+    margin-right: auto;
+  }
   .centered {
     display: block;
     margin-left: auto;
-    margin-right: auto; }
+    margin-right: auto;
+  }
   .row {
-    flex-direction: row; }
+    flex-direction: row;
+  }
   [class^=col] {
     display: flex;
     justify-content: center;
     margin-top: 0;
-    align-items: center; }
+    align-items: center;
+  }
   [class^=col] + [class^=col] {
-    margin-left: 10px; }
+    margin-left: 10px;
+  }
   .col-1 {
-    flex-basis: 8.33%; }
+    background-color: 8.33%;
+  }
   .col-2 {
-    flex-basis: 16.67%; }
+    background-color: 16.67%;
+  }
   .col-3 {
-    flex-basis: 25.00%; }
+    background-color: 25%;
+  }
   .col-4 {
-    flex-basis: 33.33%; }
+    background-color: 33.33%;
+  }
   .col-5 {
-    flex-basis: 41.67%; }
+    background-color: 41.67%;
+  }
   .col-6 {
-    flex-basis: 50.00%; }
+    background-color: 50%;
+  }
   .col-7 {
-    flex-basis: 58.33%; }
+    background-color: 58.33%;
+  }
   .col-8 {
-    flex-basis: 66.67%; }
+    background-color: 66.67%;
+  }
   .col-9 {
-    flex-basis: 75.00%; }
+    background-color: 75%;
+  }
   .col-10 {
-    flex-basis: 83.33%; }
+    background-color: 83.33%;
+  }
   .col-11 {
-    flex-basis: 91.67%; }
+    background-color: 91.67%;
+  }
   .col-12 {
-    flex-basis: 100%; }
+    background-color: 100%;
+  }
   .nav {
     flex-direction: row;
     justify-content: flex-end;
-    align-items: center; }
+    align-items: center;
+  }
   .nav-link {
-    flex-basis: 100px; }
+    flex-basis: 100px;
+  }
   .btn {
-    padding: 10px 30px; }
+    padding: 10px 30px;
+  }
   .btn + .btn {
-    margin-left: 10px; }
+    margin-left: 10px;
+  }
   .logo {
     margin-left: initial;
-    margin-right: initial; } }
-
-/* ============================================= */
-/*              Navigation                       */
-/* ============================================= */
-.nav {
-  padding-left: 0;
-  flex-basis: 100%;
-  display: flex;
-  flex-direction: column; }
-
-.nav-link {
-  text-align: center;
-  border-radius: 5px;
-  padding: 10px 0;
-  display: block;
-  width: 100%;
-  transition: background-color .2s ease-in-out,  color .2s ease-in-out; }
-
-.nav-link:hover {
-  color: #fff;
-  background-color: #58e1c1; }
+    margin-right: initial;
+  }
+}
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -234,7 +291,8 @@ html {
   line-height: 1.15;
   /* 1 */
   -webkit-text-size-adjust: 100%;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Sections
    ========================================================================== */
@@ -242,13 +300,15 @@ html {
  * Remove the margin in all browsers.
  */
 body {
-  margin: 0; }
+  margin: 0;
+}
 
 /**
  * Render the `main` element consistently in IE.
  */
 main {
-  display: block; }
+  display: block;
+}
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
@@ -256,7 +316,8 @@ main {
  */
 h1 {
   font-size: 2em;
-  margin: 0.67em 0; }
+  margin: 0.67em 0;
+}
 
 /* Grouping content
    ========================================================================== */
@@ -270,7 +331,8 @@ hr {
   height: 0;
   /* 1 */
   overflow: visible;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -280,7 +342,8 @@ pre {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Text-level semantics
    ========================================================================== */
@@ -288,7 +351,8 @@ pre {
  * Remove the gray background on active links in IE 10.
  */
 a {
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 /**
  * 1. Remove the bottom border in Chrome 57-
@@ -300,14 +364,16 @@ abbr[title] {
   text-decoration: underline;
   /* 2 */
   text-decoration: underline dotted;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
 b,
 strong {
-  font-weight: bolder; }
+  font-weight: bolder;
+}
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -319,13 +385,15 @@ samp {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Add the correct font size in all browsers.
  */
 small {
-  font-size: 80%; }
+  font-size: 80%;
+}
 
 /**
  * Prevent `sub` and `sup` elements from affecting the line height in
@@ -336,13 +404,16 @@ sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 sub {
-  bottom: -0.25em; }
+  bottom: -0.25em;
+}
 
 sup {
-  top: -0.5em; }
+  top: -0.5em;
+}
 
 /* Embedded content
    ========================================================================== */
@@ -350,7 +421,8 @@ sup {
  * Remove the border on images inside links in IE 10.
  */
 img {
-  border-style: none; }
+  border-style: none;
+}
 
 /* Forms
    ========================================================================== */
@@ -370,7 +442,8 @@ textarea {
   line-height: 1.15;
   /* 1 */
   margin: 0;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Show the overflow in IE.
@@ -379,7 +452,8 @@ textarea {
 button,
 input {
   /* 1 */
-  overflow: visible; }
+  overflow: visible;
+}
 
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
@@ -388,7 +462,8 @@ input {
 button,
 select {
   /* 1 */
-  text-transform: none; }
+  text-transform: none;
+}
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
@@ -397,7 +472,8 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button; }
+  -webkit-appearance: button;
+}
 
 /**
  * Remove the inner border and padding in Firefox.
@@ -407,7 +483,8 @@ button::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   border-style: none;
-  padding: 0; }
+  padding: 0;
+}
 
 /**
  * Restore the focus styles unset by the previous rule.
@@ -416,13 +493,15 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText; }
+  outline: 1px dotted ButtonText;
+}
 
 /**
  * Correct the padding in Firefox.
  */
 fieldset {
-  padding: 0.35em 0.75em 0.625em; }
+  padding: 0.35em 0.75em 0.625em;
+}
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
@@ -442,19 +521,22 @@ legend {
   padding: 0;
   /* 3 */
   white-space: normal;
-  /* 1 */ }
+  /* 1 */
+}
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 progress {
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
 textarea {
-  overflow: auto; }
+  overflow: auto;
+}
 
 /**
  * 1. Add the correct box sizing in IE 10.
@@ -465,14 +547,16 @@ textarea {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto; }
+  height: auto;
+}
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
@@ -482,13 +566,15 @@ textarea {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
-  /* 2 */ }
+  /* 2 */
+}
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+}
 
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
@@ -498,7 +584,8 @@ textarea {
   -webkit-appearance: button;
   /* 1 */
   font: inherit;
-  /* 2 */ }
+  /* 2 */
+}
 
 /* Interactive
    ========================================================================== */
@@ -506,13 +593,15 @@ textarea {
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
 details {
-  display: block; }
+  display: block;
+}
 
 /*
  * Add the correct display in all browsers.
  */
 summary {
-  display: list-item; }
+  display: list-item;
+}
 
 /* Misc
    ========================================================================== */
@@ -520,28 +609,33 @@ summary {
  * Add the correct display in IE 10+.
  */
 template {
-  display: none; }
+  display: none;
+}
 
 /**
  * Add the correct display in IE 10.
  */
 [hidden] {
-  display: none; }
+  display: none;
+}
 
 /* ============================================= */
 /*              Typography                       */
 /* ============================================= */
 .headline-primary {
   color: #58e1c1;
-  margin-left: 10px; }
+  margin-left: 10px;
+}
 
 .headline-secondary {
   font-weight: 300;
-  color: #777; }
+  color: #777;
+}
 
 .link {
-  color: #51ddfc;
-  font-weight: 700; }
+  color: #58e1c1;
+  font-weight: 700;
+}
 
 .blockquote {
   font-size: 1.5em;
@@ -550,4 +644,5 @@ template {
   margin-left: 20px;
   padding-left: 20px;
   border-left: 8px solid #58e1c1;
-  border-radius: 5px; }
+  border-radius: 5px;
+}
