--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -4,17 +4,17 @@
 /* ============================================= */
 
 .headline-primary {
-    color: #58e1c1;
+    color: $color-secondary;
     margin-left: 10px;
   }
   
   .headline-secondary {
     font-weight: 300;
-    color: #777;
+    color: $color-primary;
   }
   
   .link {
-    color: #51ddfc;
+    color: $color-secondary;
     font-weight: 700;
   }
   
@@ -24,7 +24,7 @@
     font-style: italic;
     margin-left: 20px;
     padding-left: 20px;
-    border-left: 8px solid #58e1c1;
+    border-left: 8px solid $color-secondary;
     border-radius: 5px;
   }
   
