--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,26 +1,92 @@
 // font stack
-$font-url--google   : 'https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,400;1,100;1,400' ;
 
+$font-url--google   : 'https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,1000,4001,1001,400';
 $font-family-primary : 'lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family-secondary: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
-//font weights
-
-$font-weight--thin        : 100;
-$font-weight--light       : 300;  
-$font-weight--medium      : 400;
-$font-weight--bold        : 700;
-$font-weight--ultra-bold  : 900;
-
 // colors
+
 $color-primary: #777;
 $color-secondary: #58e1c1;
-$white: #fff;
-$black: #0b0b0b;
-$grey : #797e83;
-
-$turquise: #61EDDE;
+$color-default: #51ddfc;
+$color-error: #e4757a;
+$color-info : #927bc1;
+$color-success: #63cc82;
+$color-warning: #fd7856;
 
 // Text
 $base__font-size : 16px;
 $base__line : 24px;
+
+// Mediq Query Breakpoints
+$min-query: 768px;
+
+
+$col-colors: (
+
+ col-1 : #927bc1,
+      
+ col-2 : #fd7856,
+      
+ col-3: #deb2ee,
+      
+ col-4 : #7ee6fd,
+      
+ col-5 : #88d9a0,
+      
+ col-6 : #4da2bb,
+      
+ col-7 : #ec9fa3,
+      
+ col-8 : #fd9f85,
+
+ col-9 : #e4757a,
+      
+ col-10 : #63cc82,
+      
+ col-11 : #51ddfc,
+      
+ col-12 : #80e8d1,
+
+);
+
+$col-percentage: (
+    
+  1 : 8.33%,
+
+      
+2 : 16.67%,
+
+      
+3 : 25.00%,
+
+      
+4 : 33.33%,
+
+      
+5 : 41.67%,
+
+      
+6 : 50.00%,
+
+      
+7 : 58.33%,
+
+      
+8 : 66.67%,
+
+      
+9 : 75.00%,
+
+      
+10 : 83.33%,
+
+      
+11 : 91.67%,
+
+      
+12 : 100%,
+
+      
+);
+
